# cd-agency

./: .bolt  .env.example  .gitignore  .replit  .windsurfrules  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION_PLAN.md  MANIFEST.in  README.md  ROADMAP.md  _config.yml  mkdocs.yml  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  new-agent.md
.github/workflows/: docs.yml  publish.yml
api/: Dockerfile  deps.py  main.py  models.py
api/routers/: agents.py  export.py  history.py  presets.py  scoring.py  scrape.py  validate.py  workflows.py
blog/: medium-post.md
content-design/: accessibility-content-auditor.md  agent-template.md  content-consistency-checker.md  content-designer-generalist.md  conversational-ai-designer.md  cta-optimization-specialist.md  empty-state-placeholder-specialist.md  error-message-architect.md  localization-content-strategist.md  microcopy-review-agent.md  mobile-ux-writer.md  notification-content-designer.md  onboarding-flow-designer.md  privacy-legal-content-simplifier.md  search-experience-writer.md  technical-documentation-writer.md  tone-evaluation-agent.md
docs/: WHEN_TO_USE.md  figma-plugin-spec.md  vscode-extension-spec.md
docs/api/: a11y.md  about.md  agent-format.md  agent.md  agents.md  analytics.md  cli-agent.md  cli-context.md  cli-export.md  cli-interactive.md  cli-memory.md  cli-presets.md  cli-score.md  cli-stats.md  cli-workflow.md  cli.md  config.md  configuration.md  custom-agents.md  export.md  guide-ci.md  guide-scoring.md  guide-workflows.md  index.md  installation.md  integrations.md  linter.md  loader.md  memory.md  presets.md  quickstart.md  registry.md  report.md  runner.md  (+5 more)
examples/: TEMPLATE.md  accessibility-content-auditor-01.md  accessibility-content-auditor-02.md  accessibility-content-auditor-03.md  cta-optimization-01.md  cta-optimization-02.md  cta-optimization-03.md  error-message-architect-01.md  error-message-architect-02.md  error-message-architect-03.md  github-action-usage.yml  microcopy-review-01.md  microcopy-review-02.md  microcopy-review-03.md  onboarding-flow-designer-01.md  onboarding-flow-designer-02.md  onboarding-flow-designer-03.md  workflow-content-audit-01.md  workflow-launch-content-package-01.md
figma-plugin/: README.md  manifest.json  package.json  tsconfig.json  webpack.config.js
mcp/: README.md  __init__.py  __main__.py  server.py
presets/: apple-hig.yaml  atlassian-design.yaml  material-design.yaml  shopify-polaris.yaml
runtime/: __init__.py  agent.py  agent_builder.py  cli.py  config.py  constraints.py  design_system.py  loader.py  memory.py  postprocess.py  preflight.py  registry.py  runner.py  versioning.py  workflow.py
tests/: test_a11y_checker.py  test_agent.py  test_analytics.py  test_api.py  test_cli.py  test_constraints.py  test_design_system.py  test_export.py  test_integration.py  test_linter.py  test_loader.py  test_mcp.py  test_memory.py  test_postprocess.py  test_preflight.py  test_product_context.py  test_registry.py  test_report.py  test_runner.py  test_scoring.py  test_versioning.py  test_voice_checker.py  test_workflow.py
tools/: __init__.py  a11y_checker.py  analytics.py  export.py  linter.py  report.py  scoring.py  voice_checker.py
vscode-extension/: .vscodeignore  README.md  package.json
web/: index.html  package-lock.json  package.json
workflows/: content-audit.yaml  error-message-pipeline.yaml  launch-content-package.yaml  localization-prep.yaml  notification-suite.yaml  schema.yaml
(+60 files in other folders)
